--- a/refs.bib
+++ b/refs.bib
@@ -17,6 +17,89 @@
   publisher={Oxford University Press}
 }
 
+@ARTICLE{2022JCAP...11..013B,
+       author = {{Barreira}, Alexandre},
+        title = "{Can we actually constrain f$_{NL}$ using the scale-dependent bias effect? An illustration of the impact of galaxy bias uncertainties using the BOSS DR12 galaxy power spectrum}",
+      journal = {\jcap},
+     keywords = {cosmological parameters from LSS, power spectrum, inflation, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2022,
+        month = nov,
+       volume = {2022},
+       number = {11},
+          eid = {013},
+        pages = {013},
+          doi = {10.1088/1475-7516/2022/11/013},
+archivePrefix = {arXiv},
+       eprint = {2205.05673},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022JCAP...11..013B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2020JCAP...12..013B,
+       author = {{Barreira}, Alexandre and {Cabass}, Giovanni and {Schmidt}, Fabian and {Pillepich}, Annalisa and {Nelson}, Dylan},
+        title = "{Galaxy bias and primordial non-Gaussianity: insights from galaxy formation simulations with IllustrisTNG}",
+      journal = {\jcap},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2020,
+        month = dec,
+       volume = {2020},
+       number = {12},
+          eid = {013},
+        pages = {013},
+          doi = {10.1088/1475-7516/2020/12/013},
+archivePrefix = {arXiv},
+       eprint = {2006.09368},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020JCAP...12..013B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2020JCAP...12..031B,
+       author = {{Barreira}, Alexandre},
+        title = "{On the impact of galaxy bias uncertainties on primordial non-Gaussianity constraints}",
+      journal = {\jcap},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2020,
+        month = dec,
+       volume = {2020},
+       number = {12},
+          eid = {031},
+        pages = {031},
+          doi = {10.1088/1475-7516/2020/12/031},
+archivePrefix = {arXiv},
+       eprint = {2009.06622},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020JCAP...12..031B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+@ARTICLE{2023JCAP...01..023L,
+       author = {{Lazeyras}, Titouan and {Barreira}, Alexandre and {Schmidt}, Fabian and {Desjacques}, Vincent},
+        title = "{Assembly bias in the local PNG halo bias and its implication for f $_{NL}$ constraints}",
+      journal = {\jcap},
+     keywords = {cosmological parameters from LSS, galaxy clustering, non-gaussianity, cosmological simulations, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2023,
+        month = jan,
+       volume = {2023},
+       number = {1},
+          eid = {023},
+        pages = {023},
+          doi = {10.1088/1475-7516/2023/01/023},
+archivePrefix = {arXiv},
+       eprint = {2209.07251},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023JCAP...01..023L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+
 @ARTICLE{Biagetti2019Galax...7...71B,
        author = {{Biagetti}, Matteo},
         title = "{The Hunt for Primordial Interactions in the Large-Scale Structures of the Universe}",
