--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,13 +1,13 @@
 \section{Introduction}
 \label{sec:introduction}
-Characteristics of the cosmic microwave background (CMB), large-scale structure (LSS), and supernovae (SN) Hubble diagrams are explained to remarkable extents by a cosmological model for the universe that consists of dark energy, dark matter, and ordinary luminous matter, and has experienced a period of rapid expansion, known as \textit{inflation}, in its early stages \citep[see, e.g.,][]{weinberg2013observational}. The paradigm of inflation elegantly addresses fundamental issues, such as the isotropy, flatness, and homogeneity of the universe as well as the absence of magnetic monopole \citep[see, e.g.,][]{weinberg2008cosmology}. At the end of inflation, the universe went through a reheating process, and primordial fluctuations were generated to seed the subsequent growth of structure \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. Even though current observations imply that inflation has certainly happened, characteristics of the field or the fields driving the inflationary expansion remain vastly unknown, and statistical properties of primordial fluctuations pose an intriguing problem in modern observational cosmology \citep[see, e.g.,][for a review]{Biagetti2019Galax...7...71B}. Early studies of cosmological observables have suggested that initial conditions of the universe are consistent with Gaussian fluctuations \citep{PhysRevD.69.103501, guth2005inflationary}; however, alternative classes of inflationary models predict some levels of non-Gaussianities in the primordial gravitational field. In its simplest form, primordial non-Gaussianity (PNG) depends on the local value of the gravitational potential $\phi$, and it is parameterized by a nonlinear coupling constant $\fnl$ \citep{komatsu2001acoustic},
+Characteristics of the temperate anisotropy and polarization maps from the cosmic microwave background (CMB) and that of the galaxy density fluctuations probed by large-scale structure (LSS) surveys are explained to remarkable extents by a cosmological model for the universe that consists of dark energy, dark matter, and ordinary luminous matter, and has experienced a period of rapid expansion, known as \textit{inflation}, in its early stages \citep[see, e.g.,][for a review]{weinberg2013observational}. The paradigm of inflation elegantly addresses fundamental issues, such as the isotropy, flatness, and homogeneity of the universe as well as the absence of magnetic monopoles \citep[see, e.g.,][]{weinberg2008cosmology}. At the end of inflation, the universe went through a reheating process, and primordial fluctuations were generated to seed the subsequent growth of structure \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. Even though current observations imply that inflation has certainly happened, characteristics of the field or the fields driving the inflationary expansion remain vastly unknown, and statistical properties of primordial fluctuations pose an intriguing problem in modern observational cosmology \citep[see, e.g.,][for a review]{Biagetti2019Galax...7...71B}. Early studies of cosmological observables have suggested that initial conditions of the universe are consistent with Gaussian fluctuations \citep{PhysRevD.69.103501, guth2005inflationary}; however, alternative classes of inflationary models predict some levels of non-Gaussianities in the primordial gravitational field. In its simplest form, primordial non-Gaussianity (PNG) depends on the local value of the gravitational potential $\phi$, and it is parameterized by a nonlinear coupling constant $\fnl$ \citep{komatsu2001acoustic},
 \begin{equation}
  \Phi = \phi + \fnl [\phi^{2} - <\phi^{2}>].
 \end{equation}
-Standard slow-roll inflation predicts $\fnl$ to be of order $10^{-2}$ \citep[see, e.g.,][for a review]{alvarez2014arXiv1412.4671A}, while multi-field inflationary scenarios anticipate considerably higher than unity $\fnl$ values \citep[see, e.g.,][]{de2017next}. Therefore, getting robust constraints on $\fnl$ is the first stepping stone toward better understanding the dynamics of the early universe. PNG alters the local number density of galaxies by coupling the long and small wavelength modes of the dark matter gravitational field, and consequently, it induces a shift in the galaxy bias which varies as $k^{-2} $\citep[see, e.g.,][]{dalal2008imprints, slosar2008constraints}. Because of the dependence of $\Delta b$ on $k^{-2}$, the signature of local primordial non-Gaussianity is more visible on small wavenumbers (or large scales) in the two-point clustering statistics. 
+Standard slow-roll inflation predicts $\fnl$ to be of order $10^{-2}$ \citep[see, e.g.,][for a review]{alvarez2014arXiv1412.4671A}, while multi-field inflationary scenarios anticipate considerably higher than unity $\fnl$ values \citep[see, e.g.,][]{de2017next}. Therefore, getting robust constraints on $\fnl$ is the first stepping stone toward better understanding the dynamics of the early universe. PNG alters the local number density of galaxies by coupling the long and small wavelength modes of the dark matter gravitational field, and consequently, it induces a scale-dependent feature in the two point clustering of biased tracers of the dark matter gravitational field \citep{dalal2008imprints}.
 
-The current tightest bound on $\fnl$ comes from the three-point clustering measurement of the CMB temperature anisotropies by the Planck satellite, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. Upcoming generations of CMB experiments will improve this constraint, but since CMB is limited by cosmic variance, its data alone cannot enhance statistical precision of $\fnl$ measurements enough to break the degeneracy amongst various inflationary paradigms \citep[see, e.g.,][]{ade2019simons}. Combining CMB with LSS data could cancel cosmic variance, partially if not completely, and improve these results to a precision level needed to differentiate between alternative inflationary scenarios \citep[see, e.g.,][]{schmittfull2018PhRvD}. Constraining $\fnl$ with the three-point clustering of LSS is likewise hindered by the late-time nonlinear effects raised from structure growth, which is non-trivial to account for \citep{baldauf2011galaxy, baldauf2011primordial}. UV Luminosity Function is a novel approach for constraining $\fnl$ by probing galaxy abundances and structure formationon small scales (e.g., $k \sim 2~{\rm Mpc}^{-1}$), which are otherwise impossible to explore with the scale-dependent bias. \cite{sabti2021JCAP} used UV Luminosity Function from the Hubble Space Telescope catalogs \citep{bouwens2015ApJ} to find a $2\sigma$ bound of $-166<\fnl<497$. Even though this is still not competitive with the current bounds from CMB and LSS, upcoming surveys such as the James Webb Space Telescope and the Nancy Grace Roman Space Telescope are forecast to yield up to four times improvements on $
-\fnl$ constraints from UV Luminosity Function. Given these limitations, the scale-dependent bias technique is the smoking gun for constraining local PNG with LSS. 
+The current tightest bound on $\fnl$ comes from the three-point clustering measurement of the CMB temperature anisotropies by the Planck satellite, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. Upcoming generations of CMB experiments will improve this constraint, but since CMB is limited by cosmic variance, its data alone cannot enhance statistical precision of $\fnl$ measurements enough to break the degeneracy amongst various inflationary paradigms \citep[see, e.g.,][]{ade2019simons}. Combining CMB with LSS data could cancel cosmic variance, partially if not completely, and improve these results to a precision level needed to differentiate between alternative inflationary scenarios \citep[see, e.g.,][]{schmittfull2018PhRvD}. Constraining $\fnl$ with the three-point clustering of LSS is likewise hindered by the late-time nonlinear systematic effects raised from structure growth, which is non-trivial to account for \citep{baldauf2011galaxy, baldauf2011primordial}. UV Luminosity Function is a novel approach for constraining $\fnl$ by probing galaxy abundances and structure formation on small scales (e.g., $k \sim 2~{\rm Mpc}^{-1}$), which are otherwise impossible to explore with the scale-dependent bias. \cite{sabti2021JCAP} used UV Luminosity Function from the Hubble Space Telescope catalogs \citep{bouwens2015ApJ} to find a $2\sigma$ bound of $-166<\fnl<497$. Even though this is still not competitive with the current bounds from CMB and LSS, upcoming surveys such as the James Webb Space Telescope and the Nancy Grace Roman Space Telescope are forecast to yield up to four times improvements on $
+\fnl$ constraints from UV Luminosity Function. Given these limitations, the scale-dependent bias technique is the smoking gun for constraining local PNG with LSS. With this technique, \cite{mueller2022primordial} analyzed the large-scale clustering of quasars and obtained \mr{XXX} at $65\%$ confidence. \mr{cite recent measurements after eBOSS}.
 
 Measuring $\fnl$ with the scale-dependent bias effect is nonetheless incredibly challenging due to various systematic effects that modulate clustering power on scales where there is a high sensitivity to $\fnl$. These systematics are broadly classified into theoretical and observational. For instance, survey geometry entangles clustering power on different angular modes \citep{beutler2014clustering,wilson2017rapid}. Relativistic effects also generate scale-dependent signatures on large scales, identical to local PNG, which hinder measuring $\fnl$ with the scale-dependent bias effect using higher order multipoles of power spectrum \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey volume, known as super-sample modes, modulate galaxy power spectrum \citep{castorina2020JCAP}. Another source for systematic error is raised because the mean galaxy density for constructing the density contrast field is estimated from data directly rather than being known a priori. This integral constraint effect pushes clustering power on modes near the survey size to zero \citep{peacock1991large,de2019integral}. Accounting for these effects in modeling power spectrum is crucial to derive unbiased $\fnl$ constraints \citep[see, e.g.,][]{riquelme2022primordial}. 
 
