--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -9,7 +9,7 @@ We follow the procedure described in \cite{hivon2002master} to estimate the angu
 where $\hat{\overline{\rho}}$ is the mean galaxy density estimated directly from the observed density field,
 \begin{equation}\label{eq:nbar}
 \hat{\overline{\rho}} = \frac{\sum_{i}\rho_{i}f_{{\rm pix},i}}{\sum_{i}f_{{\rm pix},i}},
-\end{equation}
+\end{equation}a
 with the pixel fractional completeness $f_{{\rm pix},i}$ represented by randoms. Then, the density contrast field $\delta_{i}$ is expanded into spherical harmonics $Y_{\ell m}$, 
 \begin{equation}
         \hat{a}_{\ell m} = \int d\Omega ~ \delta f_{\rm pix} Y^{*}_{\ell m},
@@ -23,20 +23,21 @@ We use the implementation of \texttt{anafast} from the \textsc{HEALPix} package 
  \subsection{Modeling}
 
 \subsubsection{Power spectrum}
-With redshift space distortions included, the projected angular power spectrum of galaxies is related to the 3D power spectrum $P(k)$  \citep[see, e.g.,][]{Padmanabhan2007} and shotnoise $N_{\rm shot}$ by,
+The projected angular power spectrum of galaxies is related to the 3D power spectrum $P(k)$  \citep[see, e.g.,][]{Padmanabhan2007} and shotnoise $N_{\rm shot}$ by,
 \begin{equation}\label{eq:cell}
     C_{\ell} = \frac{2}{\pi}\int_{0}^{\infty}\frac{dk}{k}k^{3}P(k)|\Delta_{\ell}(k)|^{2} + N_{\rm shot},
 \end{equation}
-where the shotnoise is assumed to scale-independent, and $\Delta_{\ell}(k) = \Delta^{\rm g}_{\ell}(k) + \Delta^{\rm RSD}_{\ell}(k)$ is a kernel which determines how much each wavenumber $k$ contributes to mode $\ell$ by integrating over spherical Bessel functions, $ j_{\ell}(kr)$, and their second derivatives for the RSD term,
+where the shotnoise is assumed to scale-independent, and with redshift space distortions included, $\Delta_{\ell}(k) = \Delta^{\rm g}_{\ell}(k) + \Delta^{\rm RSD}_{\ell}(k)$ is the projection kernel that determines how much each wavenumber $k$ contributes to mode $\ell$ by integrating over the $l^{\rm th}$ order spherical Bessel functions, $ j_{\ell}(kr)$,
 \begin{align}
     \Delta^{\rm g}_{\ell}(k) &= \int \frac{dr}{r} r b(k, z) D(r) \frac{dN}{dr} j_{\ell}(kr),\\
     \Delta^{\rm RSD}_{\ell}(k) &= - \int \frac{dr}{r} r f(r) D(r) \frac{dN}{dr} j^{\prime\prime}_{\ell}(kr).
 \end{align}
-The linear growth factor, $D(z)$, is scaled such that $D(0)=1$, $f(r)$ is the growth rate, and $dN/dr$ is the normalized redshift distribution of galaxies\footnote{$dN/dr = (dN/dz)*(dz/dr) \propto (dN/dz)*H(z)$} (see, Fig. \ref{fig:nz}). The galaxy bias, $b(k,z)$ can be written as the redshift dependent linear bias (Fig. \ref{fig:nz}) and the scale-dependent shift due to PNG,
+The linear growth factor, $D(z)$, is scaled such that $D(0)=1$, $f(r)$ is the growth rate, and $dN/dr$ is the normalized redshift distribution of galaxies\footnote{$dN/dr = (dN/dz)*(dz/dr) \propto (dN/dz)*H(z)$} (see, Fig. \ref{fig:nz}). The galaxy bias, $b(k,z)$, can be written as the redshift dependent linear bias (Fig. \ref{fig:nz}) and the scale-dependent shift due to PNG \citep{slosar2008constraints},
 \begin{equation}
 b(k, z) = b(z) + 3 (b(z) - p) \fnl \frac{\delta_{c} \Omega_{m} H^{2}_{0}}{k^{2}T(k)D(z) c^{2}} \frac{g(\infty)}{g(0)},
 \end{equation}
-where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{Because $k$ is in unit of $h/{\rm Mpc}$, $H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$}, $T(k)$ is the transfer function, $\delta_{c}=1.686$ is the critical density for gravitational collapse \citep{fillmore1984self}, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ \mr{(see, e.g., Mueller et al 2018)}. We choose $p=1$ for our sample of LRGs following the universality of halo function for massive haloes that host old galaxies. where $p$ determines the response of galaxies to the halo gravitational field. If only mass determines how galaxies populate a halo, $p=1$, which is often referred to as the universality of the halo occupation distribution. However, numerical simulations indicate that the halo occupation distribution for other tracers, e.g., quasars, which are from recent mergers, could depend on other properties besides mass, and thus $p$ might take different values, e.g., $p=1.6$ \citep{slosar2008constraints}. The rapid oscillations in spherical Bessel functions for the integrals over $dr$ are handled with the FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond}.
+where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{Because $k$ is in unit of $h/{\rm Mpc}$, $H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$}, $T(k)$ is the transfer function, $\delta_{c}=1.686$ represents the critical density for spherical collapse \citep{fillmore1984self}, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ \mr{(see, e.g., Mueller et al 2018)}. The parameter $p$ is the correction due to galaxy selection
+beyond a Poisson sampling of the haloes of a given mass; if only mass determines how galaxies populate a halo, $p=1$, which is often referred to as the universality of the halo occupation distribution. However, numerical simulations indicate that the halo occupation distribution for other tracers, e.g., quasars, which are from recent mergers, could depend on other properties besides mass, and thus $p$ might take different values, e.g., $p=1.6$ \citep{slosar2008constraints}. The theoretical uncertainty on $p$ is not very well investigated, and \cite{2022JCAP...11..013B} showed that marginalizing over this parameter even with wide priors leads to biased constraints because of parameter space projection effects. Using N-body simulations, \cite{2023JCAP...01..023L} investigated secondary halo properties such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of halo occupation function while halo concentration significantly alters the halo function. Without better priors on $p$, it is argued that the scale-dependent bias effect can only  be used to constrain the $p\fnl$ term \citep[see, e.g.,][]{2020JCAP...12..013B, 2020JCAP...12..031B}. However, the significance of detection of nonzero PNG is not affected by different assumptions on $p$, i.e., a nonzero detection of $p\fnl$ will imply a nonzero detection of $\fnl$. This paper is focused on how a thorough treatment of imaging systematic effects or lack thereof can impact the PNG constraints. Therefore, we choose $p=1$ for our sample of LRGs. We use the FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond} to handle the Bessel function integrals.
 
  \begin{figure}
 \centering
@@ -49,12 +50,12 @@ The ensemble average for the partial sky power spectrum is related to that of th
 \begin{equation}
     <\hat{C}_{\ell}> = \sum_{\ell^{\prime}} M_{\ell \ell^{\prime}}<C_{\ell^{\prime}}>.
 \end{equation}
-Following \cite{chon2004fast}, we model the window function effect on the theoretical power spectrum $C_{\ell}$ rather than correcting the estimated pseudo power spectrum from observation. The convolution in spherical harmonics spaces becomes a multiplication in the correlation function space. First, we estimate the correlation function of the survey mask, and then multiply the model correlation function by the survey window correlation function. Finally, the window-convolved power spectrum is obtained from,
+In general, the mode-mode coupling matrix is singular for a large sky cut, but a common approach is to use a discrete set of $\ell$ bins and assume the angular power spectrum is constant in each bin. This is not a bad assumption, but it might not be ideal for large scale modes and small bin widths. Therefore, we following a similar approach to \cite{chon2004fast}, and convolve the theoretical power spectrum $C_{\ell}$ with the survey mask window power to obtain the theoretical pseudo-power spectrum, rather than trying to de-convolve the observed power spectrum. The convolution in the spherical harmonics space becomes a multiplication in the correlation function space. To this end, we first estimate the paircount of the survey mask. The window paircount is normalized such that it is equal to one at the zero degree separation. Next, we multiply the model correlation function by the survey mask paircount. Then, the window-convolved power spectrum is obtained from,
 \begin{align}
     \hat{C}^{\rm model}_{\ell} &= 2\pi \int \hat{\omega}^{\rm model}\hat{\omega}^{\rm mask}~P_{\ell}(\cos \theta) d\theta.
 \end{align}
 
-We account for the effect of integral constraint by subtracting the power spectrum of the survey mask,
+Finally, we account for the effect of integral constraint by subtracting the power spectrum of the survey mask,
 \begin{equation}
      \hat{C}^{\rm model, IC}_{\ell} = \hat{C}^{\rm model}_{\ell} - \hat{C}^{\rm model}_{\ell=0} (\frac{\hat{C}^{\rm window}_{\ell}}{\hat{C}^{\rm window}_{\ell=0}}).
 \end{equation}
@@ -62,11 +63,11 @@ We account for the effect of integral constraint by subtracting the power spectr
 We validate the pipeline for modeling the angular power spectrum against the lognormal simulations. Fig. \ref{fig:model_mock} shows the log-transformed mean of 1000 spectra from the simulations (dashed) and the best fit theory prediction before and after accounting for survey geometry and integral constraint. light and dark shades represent the 68\% error on the mean and one single realization, respectively. DESI footprint mask is applied to the mocks, and even though DESI covers around $40\%$ of the sky, but the window effect is affecting modes down to $\ell=200$. On the other hand, integral constraint only alters the power in the first two bins.
 
 \subsection{Parameter estimation}
-Signature of local PNG is unique and cannot be reproduced with other cosmological parameters. We allow three parameters to vary; $\fnl$, shotnoise, and bias at $z=0$. Throughout this manuscript, we bin each mode with $\Delta\ell=2$ between $\ell=2$ and $20$ and $\Delta \ell=10$ from $\ell=20$ to $300$, while weighting each mode by $2\ell+1$. We also find that the distribution of power spectrum at the lowest bin, $2\leq \ell < 12$,  is not Gaussian and its standard deviation varies significantly from mocks with $\fnl=0$ to $76.9$ (see, Fig. \ref{fig:histcell}). Therefore, we attempt to fit $\log C_{\ell}$ to make our constraints insensitive to the choice of covariance matrix. The parameter $\fnl$ is constrained by maximizing a posterior defined as,
+The signature of local PNG in the two-point function is unique and cannot be reproduced with other standard cosmological parameters. For parameter inference, we use standard Monte-Carlo Markov Chain sampling while allowing three parameters to vary; $\fnl$, shotnoise, and bias. We assume a constant clustering amplitude for our sample of LRGs, $b(z) = b/D(z)$, and fit for b. Throughout this manuscript, we use a discrete set of bandpower bins with $\Delta\ell=2$ between $\ell=2$ and $20$ and $\Delta \ell=10$ from $\ell=20$ to $300$, while weighting each mode by $2\ell+1$. We also find that the distribution of power spectrum at the lowest bin, $2\leq \ell < 12$,  is not Gaussian and its standard deviation varies significantly from mocks with $\fnl=0$ to those with $76.9$ (see, Fig. \ref{fig:histcell}). Therefore, we attempt to fit $\log C_{\ell}$ to make our constraints less sensitive to the choice of covariance matrix. The parameter $\fnl$ is constrained by maximizing a posterior defined as,
 \begin{equation}
 -2\ln\mathcal{L} = (\log C(\Theta)-\log \hat{C})^{\dagger} \mathbb{C}^{-1} (\log C(\Theta)-\log \hat{C}) + \chi^{2}_{\rm priors},
 \end{equation}
-where $\Theta$ represents the parameters, $\fnl$, bias at $z=0$, and shotnoise, all of which are associated with a flat prior, $\chi^{2}_{\rm priors}$; $C(\Theta)$ is the (binned) theoretical power spectrum including the effects for survey geometry and integral constraint; $\hat{C}$ is the (binned) measured power spectrum; and $\mathbb{C}$ is the covariance matrix constructed from simulations. 
+where $\Theta$ represents the parameters, $\fnl$, bias coefficient, and shotnoise, all of which are associated with a flat prior, $\chi^{2}_{\rm priors}$; $C(\Theta)$ is the (binned) theoretical power spectrum including the effects for survey geometry and integral constraint; $\hat{C}$ is the (binned) measured power spectrum; and $\mathbb{C}$ is the covariance matrix constructed from simulations. 
 
 \begin{figure}
 \centering
