--- a/sections/results.tex
+++ b/sections/results.tex
@@ -233,11 +233,11 @@ With template based mitigation, the measured power spectrum is biased and the am
 \begin{figure}
 \centering
 \includegraphics[width=0.45\textwidth]{figures/fnlbias}
-\caption{True $\fnl$ vs measured $\fnl$ from the mean of the mocks with (dashed) and without systematics (solid).}\label{fig:fnlbias}
+\caption{True $\fnl$ vs measured $\fnl$ from the $\fnl=0$ and $76.9$ mocks with (dashed) and without systematics (solid). The solid lines represent the best fit from fitting the mean spectra and the scatters show the best fit estimates from fitting individual mocks.}\label{fig:fnlbias}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=0.45\textwidth]{figures/mcmc_cont.pdf}
-\caption{Shifted probability distributions of $\fnl$ from mocks.}\label{fig:contmcmc}
+\caption{Shifted probability distributions of $\fnl$ from the $\fnl=0$ mocks.}\label{fig:contmcmc}
 \end{figure}
