--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -37,7 +37,7 @@ The linear growth factor, $D(z)$, is scaled such that $D(0)=1$, $f(r)$ is the gr
 b(k, z) = b(z) + 3 (b(z) - p) \fnl \frac{\delta_{c} \Omega_{m} H^{2}_{0}}{k^{2}T(k)D(z) c^{2}} \frac{g(\infty)}{g(0)},
 \end{equation}
 where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{Because $k$ is in unit of $h/{\rm Mpc}$, $H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$}, $T(k)$ is the transfer function, $\delta_{c}=1.686$ represents the critical density for spherical collapse \citep{fillmore1984self}, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ \mr{(see, e.g., Mueller et al 2018)}. The parameter $p$ is the correction due to galaxy selection
-beyond a Poisson sampling of the haloes of a given mass; if only mass determines how galaxies populate a halo, $p=1$, which is often referred to as the universality of the halo occupation distribution. However, numerical simulations indicate that the halo occupation distribution for other tracers, e.g., quasars, which are from recent mergers, could depend on other properties besides mass, and thus $p$ might take different values, e.g., $p=1.6$ \citep{slosar2008constraints}. The theoretical uncertainty on $p$ is not very well investigated, and \cite{2022JCAP...11..013B} showed that marginalizing over this parameter even with wide priors leads to biased constraints because of parameter space projection effects. Using N-body simulations, \cite{2023JCAP...01..023L} investigated secondary halo properties such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of halo occupation function while halo concentration significantly alters the halo function. Without better priors on $p$, it is argued that the scale-dependent bias effect can only  be used to constrain the $p\fnl$ term \citep[see, e.g.,][]{2020JCAP...12..013B, 2020JCAP...12..031B}. However, the significance of detection of nonzero PNG is not affected by different assumptions on $p$, i.e., a nonzero detection of $p\fnl$ will imply a nonzero detection of $\fnl$. This paper is focused on how a thorough treatment of imaging systematic effects or lack thereof can impact the PNG constraints. Therefore, we choose $p=1$ for our sample of LRGs. We use the FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond} to handle the Bessel function integrals.
+beyond a Poisson sampling of the haloes of a given mass; if only mass determines how galaxies populate a halo, $p=1$, which is often referred to as the universality of the halo occupation distribution. However, numerical simulations indicate that the halo occupation distribution for other tracers, e.g., quasars, which are from recent mergers, could depend on other properties besides mass, and thus $p$ might take different values \citep[see, e.g.,][]{slosar2008constraints}. The theoretical uncertainty on $p$ is not very well understood, and \cite{2022JCAP...11..013B} showed that marginalizing over this parameter even with wide priors leads to biased constraints because of parameter space projection effects. Using N-body simulations, \cite{2023JCAP...01..023L} investigated secondary halo properties such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of halo occupation function while halo concentration significantly alters the halo function. Without better priors on $p$, it is argued that the scale-dependent bias effect can only  be used to constrain the $p\fnl$ term \citep[see, e.g.,][]{2020JCAP...12..013B, 2020JCAP...12..031B}. However, the significance of detection of nonzero PNG is not affected by different assumptions on $p$, i.e., a nonzero detection of $p\fnl$ will imply a nonzero detection of $\fnl$. This paper is focused on how a thorough treatment of imaging systematic effects or lack thereof can impact the PNG constraints. Therefore, we choose $p=1$ for our sample of LRGs. We use the FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond} to handle the Bessel function integrals.
 
  \begin{figure}
 \centering
